# stereo

./: .gitlab-ci.yml  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  wireframe.html
.agents/: product-marketing-context.md
billing/: package.json  tsconfig.json  vitest.config.ts  wrangler.test.toml  wrangler.toml
billing/src/: index.ts  types.ts
billing/src/db/: schema.ts
billing/src/db/migrations/: 0000_create_tables.sql
billing/src/lib/: license.ts  rate-limit.ts  stripe.ts
billing/src/routes/: activate.ts  checkout.ts  health.ts  validate.ts  webhook.ts
billing/tests/: integration.test.ts
examples/: api-health.md  demo.md  welcome.md
landing/: index.html
marketing/: PROMPT.md  demo-animation.html  howto-animation.html  record-howto.mjs  screenshot-site.mjs  stereo-demo.webm  stereo-howto.webm  stereo-tabloid-web.html  stereo-tabloid.html  x-launch-posts.md
sidecar/: Cargo.toml
sidecar/src/: env.rs  main.rs  proxy.rs  rpc.rs
snippets/: stereo.json
src/: env.ts  extension.ts  parser.ts  sidecar.ts  types.ts
src/editor/: messaging.ts  provider.ts
src/test/: env.test.ts  parser.test.ts
src/webview/: index.tsx  renderer.tsx
src/webview/components/: DashGrid.tsx  MetricCard.tsx  RunBlock.tsx  Sparkline.tsx  StatusTable.tsx
src/webview/styles/: components.css  editor.css  tokens.css
