[package]
name = "stereo-sidecar"
version = "0.1.0"
edition = "2021"
description = "HTTP proxy sidecar for Stereo VS Code extension"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
